redis: use notes
git-svn-id: https://svn.macports.org/repository/macports/trunk@72410 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/redis/Portfile
+++ b/dports/databases/redis/Portfile
@@ -69,16 +69,14 @@ post-activate {
     }
     xinstall -d ${prefix}/var/log
     touch ${prefix}/var/log/redis.log
-    ui_msg "
-=============================================================================
-* To start up a redis server instance use this command:
-* 
-*   redis-server ${prefix}/etc/redis.conf
-* 
-=============================================================================
-"
 }
 
 startupitem.create      yes
 startupitem.start       "${prefix}/bin/redis-server ${prefix}/etc/redis-daemon.conf"
 startupitem.stop        "echo \"SHUTDOWN\" | nc localhost 6379"
+
+notes "
+To start up a redis server instance use this command:
+
+    redis-server ${prefix}/etc/redis.conf
+"
