curl, curl-ca-bundle: update to 7.21.2
git-svn-id: https://svn.macports.org/repository/macports/trunk@72411 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/curl/Portfile
+++ b/dports/net/curl/Portfile
@@ -7,7 +7,7 @@ PortGroup                   archcheck 1.0
 
 name                        curl
 # keep the version in sync with the curl-ca-bundle port
-version                     7.21.1
+version                     7.21.2
 categories                  net www
 maintainers                 ryandesign
 license                     curl
@@ -30,9 +30,8 @@ master_sites                http://curl.haxx.se/download/ \
                             http://cool.haxx.se/curl/ \
                             http://www.execve.net/curl/
 
-checksums                   md5     eafde5b933bce1c1dca82d1054c8d967 \
-                            sha1    d6ad8d7caf6e15f318e7b9f69dee8f67c807b1a0 \
-                            rmd160  3acc531f70adf68ce64bf8ccd198cbc33b6d5246
+checksums                   sha1    f729552a905033dbd0d2cf56e40c7048f2d8331e \
+                            rmd160  fcb1302f79741bc3e488fcee1206284f4cb9e6ca
 
 configure.args              --enable-ipv6 \
                             --without-gnutls \
