pdftk: update to 1.43 and add gcc45 variant, so now this works on Snow Leopard; see #15420
git-svn-id: https://svn.macports.org/repository/macports/trunk@72412 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/pdftk/Portfile
+++ b/dports/textproc/pdftk/Portfile
@@ -4,15 +4,14 @@
 PortSystem              1.0
 
 name                    pdftk
-version                 1.41
-revision                2
+version                 1.43
 categories              textproc graphics pdf
 maintainers             ryandesign
 platforms               darwin
-homepage                http://www.pdfhacks.com/pdftk/
+homepage                http://www.pdflabs.com/tools/pdftk-the-pdf-toolkit/
 master_sites            ${homepage}
-use_bzip2               yes
-worksrcdir              ${distname}/${name}
+use_zip                 yes
+extract.suffix          -src${extract.suffix}
 use_configure           no
 universal_variant       no
 use_parallel_build      no
@@ -36,62 +35,73 @@ long_description \
     Uncompress and Re-Compress Page Streams \
     Repair Corrupted PDF (Where Possible)
 
-checksums \
-    md5 7214230b937dc996d209c05b7b7b3518 \
-    sha1 e5eb83dd96dbda68072efe8f2637aad59f50dffc
+checksums               sha1    ab701140a4eb78f0c855144a375fd52a8e6b0734 \
+                        rmd160  33206067de0e093a18458523ee3bb46bcf72864b
 
 depends_lib \
     port:libiconv
 
-set toolpath ${prefix}/bin/
+build.dir               ${worksrcpath}/${name}
+
+patchfiles              patch-Makefile.OSX-10.6.diff
+
+post-patch {
+    reinplace "s|@PREFIX@|${prefix}|g" ${build.dir}/Makefile.OSX-10.6
+}
+
 set versuff ""
 
-pre-fetch {
-    if {![file exists ${toolpath}gcj${versuff}]} {
+pre-configure {
+    if {![file exists ${prefix}/bin/gcj${versuff}]} {
         return -code error "
 
-Cannot build ${name} because ${toolpath}gcj${versuff}
+Cannot build ${name} because ${prefix}/bin/gcj${versuff}
 is missing, possibly because of this gcc bug:
 
-http://trac.macports.org/projects/macports/ticket/13553
+http://trac.macports.org/ticket/13553
 "
     }
 }
 
 pre-build {
-    reinplace "s|^\\(CPPFLAGS=\\)|\\1 ${configure.cppflags}|" ${worksrcpath}/Makefile.MacOSX
-    reinplace "s|^\\(CXXFLAGS=\\)|\\1 ${configure.cxxflags} ${configure.ldflags}|" ${worksrcpath}/Makefile.MacOSX
-    build.args-append   TOOLPATH=${toolpath} VERSUFF=${versuff}
+    build.args-append   VERSUFF=${versuff}
 }
 
-build.args \
-    -f Makefile.MacOSX
+build.args-append       -f Makefile.OSX-10.6
 
 destroot {
     xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
-    xinstall -m 755 -W ${worksrcpath} pdftk ${destroot}${prefix}/bin
-    xinstall -m 644 -W ${worksrcpath}/.. pdftk.1.html pdftk.1.txt \
+    xinstall -m 755 -W ${destroot.dir} pdftk ${destroot}${prefix}/bin
+    xinstall -m 644 -W ${worksrcpath} changelog.html changelog.txt pdftk.1.html pdftk.1.txt \
         ${destroot}${prefix}/share/doc/${name}
-    xinstall -m 644 -W ${worksrcpath}/../debian pdftk.1 \
+    xinstall -m 644 -W ${worksrcpath} pdftk.1 \
         ${destroot}${prefix}/share/man/man1
 }
 
-if {${os.arch} == "powerpc"} {
-variant with_gcc41 conflicts with_gcc42 description {Build using gcc41 (PowerPC only)} {
+variant with_gcc41 requires gcc41 description {Deprecated synonym for gcc41} {}
+variant gcc41 conflicts gcc42 gcc45 description {Build using gcc41} {
+    patchfiles-append   patch-gcj-4.2-and-older.diff
+    configure.compiler  macports-gcc-4.1
+    depends_build-append port:fastjar
     depends_lib-append  port:gcc41
     set versuff         -mp-4.1
 }
-}
 
-variant with_gcc42 conflicts with_gcc41 description {Build using gcc42} {
+variant with_gcc42 requires gcc42 description {Deprecated synonym for gcc42} {}
+variant gcc42 conflicts gcc41 gcc45 description {Build using gcc42} {
+    patchfiles-append   patch-gcj-4.2-and-older.diff
+    configure.compiler  macports-gcc-4.2
+    depends_build-append port:fastjar
     depends_lib-append  port:gcc42
     set versuff         -mp-4.2
 }
 
-if { (![variant_exists with_gcc41] || ![variant_isset with_gcc41]) && ![variant_isset with_gcc42] } {
-    default_variants    +with_gcc42
+variant gcc45 conflicts gcc41 gcc42 description {Build using gcc45} {
+    configure.compiler  macports-gcc-4.5
+    depends_lib-append  port:gcc45
+    set versuff         -mp-4.5
 }
 
-# Patch based on handle_utf8_data_in_update_info from the Debian package pdftk.
-patchfiles      patch-report.cc.diff
-patch.args      -p2
+if {![variant_isset gcc41] && ![variant_isset gcc42] && ![variant_isset gcc45]} {
+    default_variants    +gcc45
+}
