bibtex2html: fix "library not found for -lstr" compilation error; see #26724
git-svn-id: https://svn.macports.org/repository/macports/trunk@72415 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/bibtex2html/Portfile
+++ b/dports/textproc/bibtex2html/Portfile
@@ -4,6 +4,7 @@ PortSystem  1.0
 
 name        bibtex2html
 version     1.96
+revision    1
 categories  textproc www
 platforms   darwin
 maintainers loria.fr:reilles
@@ -16,7 +17,8 @@ homepage         http://www.lri.fr/~filliatr/bibtex2html/
 master_sites     http://www.lri.fr/~filliatr/ftp/bibtex2html
 checksums	sha1 ce447520fde0a66bbbda0db247f06afb5e53907c \
 		md5  cd63fcb95043a3677377b87f30bef7d4
-patchfiles       patch-aux2bib.1.diff
+
+patchfiles       patch-Makefile.in.diff patch-aux2bib.1.diff
 configure.args   --mandir=${destroot}${prefix}/share/man
 depends_build    port:ocaml port:hevea
 depends_run      bin:bibtex:texlive
