add support for openssl/zlib/bzip2; inc. revision; #18858 -- thanks tommyd!
git-svn-id: https://svn.macports.org/repository/macports/trunk@72417 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/security/botan/Portfile
+++ b/dports/security/botan/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name			botan
 version			1.8.10
+revision                1
 categories		security devel
 platforms		darwin
 maintainers		mww
@@ -22,10 +23,12 @@ checksums           md5     70350060944c08132aab836f682405c5 \
                     rmd160  fff0f22e768da4e6f0afca434602a4a76f78a006
 use_bzip2		yes
 
+depends_lib     port:openssl port:zlib port:bzip2
+
 worksrcdir	Botan-${version}
 
 configure.cmd	./configure.py
-configure.args	--docdir=share/doc --cc=gcc
+configure.args	--docdir=share/doc --cc=gcc --with-openssl --with-zlib --with-bzip2
 
 destroot.destdir DESTDIR=${destroot}${prefix}
 
