libfetch: fix breakage with openssl 1.0.0a
git-svn-id: https://svn.macports.org/repository/macports/trunk@72418 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/libfetch/Portfile
+++ b/dports/net/libfetch/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name		libfetch
 version		6.2.0-RELEASE
+revision	1
 categories	net
 maintainers	nomaintainer
 description	FreeBSD file fetching library
@@ -23,7 +24,7 @@ destroot	{
 		xinstall -m 644 -c ${worksrcpath}/fetch.3 ${destroot}${prefix}/share/man/man3 }
 
 platform darwin {
-	patchfiles	patch-Makefile patch-common.h
+	patchfiles	patch-Makefile patch-common.h patch-common.c
 	build.env	LDADD="-Wl,-install_name,${prefix}/lib/libfetch.${libver}.dylib"
 	pre-destroot {
 		xinstall -m 644 -c ${worksrcpath}/libfetch.${libver}.dylib \
