editors/MacVim: Use local cache directory, fixes #26723
git-svn-id: https://svn.macports.org/repository/macports/trunk@72421 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/MacVim/Portfile
+++ b/dports/editors/MacVim/Portfile
@@ -37,9 +37,12 @@ pre-fetch {
     }
 }
 
-# github zipball has root folder including commitish, renaming for ease of use
 post-extract {
+    # github zipball has root folder including commitish, renaming for ease of use
     file rename [glob ${workpath}/b4winckler-*] ${worksrcpath}
+
+    # create cache directory
+    file mkdir ${workpath}/caches
 }
 
 post-patch {
@@ -55,6 +58,9 @@ configure.args      --enable-gui=macvim \
                     --disable-nls \
                     --with-tlib=ncurses \
                     --enable-multibyte
+
+# Old pre-compiled headers could influence build, #26723
+build.args          XCODEFLAGS="CACHE_ROOT=${workpath}/caches"
 
 destroot {
     copy ${worksrcpath}/src/MacVim/build/Release/MacVim.app ${destroot}${applications_dir}
