PCLauncher: fix non-root installs by overriding Xcode's very stupidly obsessive write permission removal
git-svn-id: https://svn.macports.org/repository/macports/trunk@72422 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/PCLauncher/Portfile
+++ b/dports/games/PCLauncher/Portfile
@@ -37,6 +37,11 @@ post-patch {
 }
 
 post-destroot {
+    fs-traverse dir ${destroot} {
+        if {[file isdirectory ${dir}]} {
+            file attributes ${dir} -permissions u+w
+        }
+    }
     foreach app {PCDownloader PCExtractor} {
         xinstall -d ${destroot}${applications_dir}/PCLauncher.app/Contents/Resources/${app}.app/Contents/MacOS
         xinstall ${worksrcpath}/${app} ${destroot}${applications_dir}/PCLauncher.app/Contents/Resources/${app}.app/Contents/MacOS/${app}
