--- a/dports/audio/libsdl_mixer/Portfile
+++ b/dports/audio/libsdl_mixer/Portfile
@@ -24,21 +24,23 @@ checksums       md5     65ada3d997fe85109191a5fb083f248c \
                 rmd160  559355116a1c380edf71879da0dbcf5359f05476
 
 depends_lib     path:lib/pkgconfig/sdl.pc:libsdl \
+				port:flac \
                 port:smpeg \
                 port:libvorbis \
                 port:libogg
-
-if {[variant_isset universal]} {
-    set archflags ${configure.universal_cflags}
-} else {
-    set archflags ${configure.cc_archflags}
-}
-configure.cc    ${configure.cc} ${archflags}
 
 configure.args  --with-sdl-prefix=${prefix} \
                 --disable-sdltest \
                 --with-smpeg-prefix=${prefix} \
                 --disable-smpegtest
+
+if {[variant_isset universal]} {
+    set archflags ${configure.universal_cflags}
+    configure.args-append	CPP=/usr/bin/cpp
+} else {
+    set archflags ${configure.cc_archflags}
+}
+configure.cc    ${configure.cc} ${archflags}
 
 post-patch {
     reinplace "s|`find_lib\\(.*\\.dylib\\)|${prefix}/lib/`find_lib\\1|g" ${worksrcpath}/configure
