xterm: Bump to 264
git-svn-id: https://svn.macports.org/repository/macports/trunk@72424 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xterm/Portfile
+++ b/dports/x11/xterm/Portfile
@@ -3,8 +3,7 @@
 PortSystem          1.0
 
 name                xterm
-version             262
-revision            1
+version             264
 categories          x11
 platforms           darwin
 maintainers         jeremyhu openmaintainer
@@ -15,9 +14,9 @@ long_description    The xterm program is a terminal emulator for the X \
 
 homepage            http://invisible-island.net/xterm/
 master_sites        ftp://invisible-island.net/xterm/
-checksums           md5     d25eab48f995893f9d115fbfeea6b658 \
-                    sha1    3c8fc8f776e1b3bcf4973908b0c84cf5d4379a28 \
-                    rmd160  ef9693a682c6a90f5baf5153db82bd3a8fd4683f
+checksums           md5     05a77528f51501b62d4acac8b781c05d \
+                    sha1    1291a8b931394138c684f72923381a6b20d34f7d \
+                    rmd160  5706d402bb9e90d57d5684331cc16a9b899082a2
 extract.suffix      .tgz
 
 depends_build \
@@ -33,7 +32,7 @@ depends_lib \
 	port:xorg-libXaw \
 	port:Xft2
 
-patchfiles PR-7191532.patch  xterm-nohide-pointer.patch  xutf8.patch
+patchfiles PR-7191532.patch  xterm-nohide-pointer.patch
 
 patch.pre_args -p1
 
