py27-notify-python: define __PyGObject_API once (in pynotify.c) specify python 2.7 in configure
git-svn-id: https://svn.macports.org/repository/macports/trunk@72427 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py27-notify-python/Portfile
+++ b/dports/python/py27-notify-python/Portfile
@@ -31,13 +31,13 @@ checksums          	md5     d247cf79b46cef7495deb0a76334f81d \
                     rmd160  52f5b5cc7c01be32525db7a2edc0f3dee41911ef
 
 depends_lib         port:libnotify\
-                    port:py26-gtk
+                    port:py27-gtk
 
-patchfiles			patch-src-pynotifymodule-c.diff\
-					patch-src-pynotify-c.diff
+patchfiles			patch-src-pynotifymodule-c.diff
                     
 set my_python "${frameworks_dir}/Python.framework/Versions/2.7"
 
+configure.python    ${my_python}/bin/python
 configure.pkg_config_path   ${my_python}/lib/pkgconfig
 configure.pre_args	--prefix=${my_python}
     
