textproc/remind: Update to 03.01.09, disable MacOS X nagware
git-svn-id: https://svn.macports.org/repository/macports/trunk@72429 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/remind/Portfile
+++ b/dports/textproc/remind/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name                remind
-version             03.01.06
+version             03.01.09
 categories          textproc pim
 platforms           darwin
 maintainers         nomaintainer
@@ -13,12 +13,12 @@ long_description    Remind is a sophisticated calendar and alarm service for UNI
                     programs. Remind offers a specialized scripting language which can \
                     be used to express rather complicated scheduling methods in just a few lines.
 
-homepage            http://www.roaringpenguin.com/penguin/openSourceProducts/remind
+homepage            http://www.roaringpenguin.com/products/remind
 master_sites        http://www.roaringpenguin.com/files/download/
-checksums           md5 65e5052ebdeeb31689bc68e7854150d5 \
-                    sha1 ede286bed901c140ccf27c1700682e18a10326cd \
-                    rmd160 179f7a3212d351fe62eb73aae980fc578cd39d35
+checksums           md5 261a5fb774a1d671cc71e36fd0ea02b3 \
+                    sha1 275f5375ac74269fa23df0c7de7aa9226e222e8a
 
+patchfiles          patch-remove-apple-nag.patch
 livecheck.type      regex
 livecheck.regex     "remind-(.*?).tar.gz"
 
