libsdl_mixer: use the correct preprocessor
git-svn-id: https://svn.macports.org/repository/macports/trunk@72431 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/libsdl_mixer/Portfile
+++ b/dports/audio/libsdl_mixer/Portfile
@@ -36,7 +36,7 @@ configure.args  --with-sdl-prefix=${prefix} \
 
 if {[variant_isset universal]} {
     set archflags ${configure.universal_cflags}
-    configure.args-append	CPP=/usr/bin/cpp
+    configure.args-append	CPP=${configure.cpp}
 } else {
     set archflags ${configure.cc_archflags}
 }
