--- a/dports/python/py26-tables/Portfile
+++ b/dports/python/py26-tables/Portfile
@@ -45,4 +45,4 @@ variant lzo description "Use lzo2 compression library" {
 
 livecheck.type     regex
 livecheck.url      ${homepage}
-livecheck.regex    {PyTables ([0-9]+\.[0-9]+\.[0-9]+) released}
+livecheck.regex    {PyTables ([0-9]+\.[0-9\.]+) \(final\) released}
