--- a/dports/graphics/poppler/Portfile
+++ b/dports/graphics/poppler/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 PortGroup  muniversal 1.0
 
 name        poppler
+conflicts   xpdf
 version     0.14.4
 maintainers devans openmaintainer
 categories  graphics
