--- a/dports/graphics/xpdf/Portfile
+++ b/dports/graphics/xpdf/Portfile
@@ -3,6 +3,7 @@
 PortSystem 1.0
 
 name         xpdf
+conflicts    poppler
 version      3.02
 revision     6
 description  Xpdf is a viewer for PDF files.
