R: fix libR.pc pkgconfig file so R consumers can find the headers; see #26787
git-svn-id: https://svn.macports.org/repository/macports/trunk@72437 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/R/Portfile
+++ b/dports/math/R/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 
 name             R
 version          2.11.1
-revision         1
+revision         2
 categories       math science
 maintainers      epfl.ch:kjell.konis
 platforms        darwin
@@ -105,6 +105,8 @@ post-destroot {
   }
 
   reinplace "s|rlibdir=\$\{rhome\}/lib|rlibdir=\$\{rhome\}/lib/${build_arch}|" \
+            "${destroot}${prefix}/lib/pkgconfig/libR.pc"
+  reinplace "s|Cflags: -I\$\{rincludedir\}|Cflags: -I\$\{rincludedir\} -I\$\{rincludedir\}/${build_arch}|" \
             "${destroot}${prefix}/lib/pkgconfig/libR.pc"
 
   foreach dylib [ exec find ${destroot}${prefix}/lib/R/lib/${build_arch} -name "\*.dylib" ] {
