devel/ld64: update to 97.14 on darwin 10 and patch to work with llvm 2.8
git-svn-id: https://svn.macports.org/repository/macports/trunk@72439 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/ld64/Portfile
+++ b/dports/devel/ld64/Portfile
@@ -1,51 +1,119 @@
 # $Id$
 
 PortSystem              1.0
+PortGroup               xcode 1.0
 
 name                    ld64
-version                 85.2.1
+version                 97.14
 categories              devel
-platforms               darwin
 maintainers             mfeiri
 homepage                http://opensource.apple.com/source/ld64/
 master_sites            http://opensource.apple.com/tarballs/ld64/
 license                 Apple Public Source License (APSL), version 2.0
 depends_build           path:include/llvm-c/lto.h:llvm
-patchfiles              patch-src_LTOreader.hpp.diff \
-                        patch-ld64.xcodeproj_project.pbxproj.diff
-
+universal_variant       no
 description             ld64 is the new mach-o linker
 long_description        ld64 combines several object files and libraries, \
                         resolves references, and produces an ouput file.
 
-checksums               md5 6dac3ce6d3b495df9a3996cd5781c874 \
+
+if {${os.major} < 9} {
+    pre-fetch {
+        ui_error "${name} requires Mac OS X 10.5 or later."
+        return -code error "incompatible Mac OS X version"
+    }
+}
+
+
+platform darwin 9 {
+
+    version             85.2.1
+    revision            1
+    checksums           md5 6dac3ce6d3b495df9a3996cd5781c874 \
                         sha1 31a7debf4c407c32b8bd1a51a4b4a7ae68dc8b85 \
                         rmd160 42c80bd4ad6e9f96a757245e6a2b95084c009ff1
 
-post-patch {
-   reinplace "s|@@PREFIX@@|${prefix}|g" ${worksrcpath}/src/LTOReader.hpp \
-       ${worksrcpath}/ld64.xcodeproj/project.pbxproj
+    patchfiles          patch-MATH85-ld.cpp.diff
+    xcode.target        all ObjectDump machocheck
+    xcode.destroot.path ${prefix}/bin
+    build.env           OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
+    destroot.env        OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
+
+    post-patch {
+        reinplace "s|/usr/share/man/man1|${prefix}/share/man/man1|g" \
+            ${worksrcpath}/ld64.xcodeproj/project.pbxproj
+        reinplace "s|/Developer/usr/local|${prefix}|g" \
+            ${worksrcpath}/ld64.xcodeproj/project.pbxproj
+        reinplace "s|\$(RC_ProjectSourceVersion)|${version}|g" \
+            ${worksrcpath}/ld64.xcodeproj/project.pbxproj
+    }
 }
 
-use_configure   no
-build.target    
-if {${os.major} > 9} {
-    build.cmd   true
-} else {
-    build.cmd   xcodebuild
+
+platform darwin 10 {
+
+    svn.revision        115426
+    svn.url             http://llvm.org/svn/llvm-project/lldb/trunk/source/Plugins/Process/Utility/libunwind
+    master_sites-append http://opensource.apple.com/source/dyld/dyld-132.13/include/mach-o/dyld_priv.h?txt&dummy=:dyld \
+                        http://opensource.apple.com/source/cctools/cctools-782/include/mach-o/arm/reloc.h?txt&dummy=:cctools
+    distfiles-append    dyld_priv.h:dyld reloc.h:cctools
+    extract.only        ${distname}${extract.suffix}
+    checksums           ${distname}${extract.suffix} \
+                        md5 ad469f37d670929f9b326f16d4373a73 \
+                        sha1 a21da97f574a121ef29b8a1bfc7a7c74692a0152 \
+                        rmd160 5116cc587a7761d06e1da93019362705510c3d7b \
+                        dyld_priv.h \
+                        md5 b956b96e6a566691109692e11b59f67f \
+                        sha1 eb5daccff286a1154f29d0b3485218b198920f25 \
+                        rmd160 278d8f891b5171adbbb3c4975c44f5887bd43375 \
+                        reloc.h \
+                        md5 6ce50950669d083aab458f196ec3a2fc \
+                        sha1 87f0265f0f6abefd1e2cf12fe29242fb219fd71f \
+                        rmd160 b9c6c4fcf7731a508b82dd09af81fa8b26caf3ef
+
+    patchfiles          patch-lldb_private-libunwind.diff patch-MATH-ld.cpp.diff
+    xcode.target        all ObjectDump machocheck
+    xcode.destroot.path ${prefix}/bin
+    xcode.build.settings HEADER_SEARCH_PATHS=${workpath}/libunwind/include
+    xcode.destroot.settings HEADER_SEARCH_PATHS=${workpath}/libunwind/include
+    build.env           OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
+    destroot.env        OTHER_CFLAGS='[exec ${prefix}/bin/llvm-config --cflags]'
+
+    post-extract {
+        system "cd ${workpath} && ${svn.cmd} ${svn.pre_args} ${svn.method} ${svn.url}@${svn.revision}"
+        file mkdir ${workpath}/libunwind/include/mach-o/arm
+        file rename ${workpath}/libunwind/src ${workpath}/libunwind/include/libunwind
+        file rename ${distpath}/dyld_priv.h ${workpath}/libunwind/include/mach-o/
+        file rename ${distpath}/reloc.h ${workpath}/libunwind/include/mach-o/arm/
+        reinplace "s|/usr/share/man/man1|${prefix}/share/man/man1|g" \
+            ${worksrcpath}/ld64.xcodeproj/project.pbxproj
+        reinplace "s|usr/share/man/man1|${prefix}/share/man/man1|g" \
+            ${worksrcpath}/ld64.xcodeproj/project.pbxproj
+        reinplace "s|/Developer/usr/local|${prefix}|g" \
+            ${worksrcpath}/ld64.xcodeproj/project.pbxproj
+        reinplace "s|/usr/local|${prefix}|g" \
+            ${worksrcpath}/ld64.xcodeproj/project.pbxproj
+        reinplace "s|\$(RC_ProjectSourceVersion)|${version}|g" \
+            ${worksrcpath}/ld64.xcodeproj/project.pbxproj
+        foreach f [glob ${workpath}/libunwind/include/libunwind/*.h*] {
+            reinplace "s|lldb_private|libunwind|g" $f
+        }
+    }
+
+    post-destroot {
+        file rename ${destroot}${prefix}/bin/libprunetrie.a ${destroot}${prefix}/lib/libprunetrie.a
+    }
 }
 
-destroot {
-    if {${os.major} > 9} {
+
+if {${os.major} > 10} {
+    distfiles
+    build { }
+    destroot {
         file copy /usr/bin/ld ${destroot}${prefix}/bin
         file copy /usr/bin/rebase ${destroot}${prefix}/bin
         file copy /usr/share/man/man1/ld.1 ${destroot}${prefix}/share/man/man1
         file copy /usr/share/man/man1/rebase.1 ${destroot}${prefix}/share/man/man1
-    } else {
-        file copy ${worksrcpath}/build/Release/ld ${destroot}${prefix}/bin
-        file copy ${worksrcpath}/build/Release/rebase ${destroot}${prefix}/bin
-        file copy ${worksrcpath}/doc/man/man1/ld.1 ${destroot}${prefix}/share/man/man1
-        file copy ${worksrcpath}/doc/man/man1/rebase.1 ${destroot}${prefix}/share/man/man1
     }
 }
 
