--- a/dports/graphics/graphviz-gui-devel/Portfile
+++ b/dports/graphics/graphviz-gui-devel/Portfile
@@ -10,7 +10,7 @@ name                            graphviz-gui-devel
 conflicts                       graphviz-gui graphviz-oldgui
 set my_name                     graphviz
 # keep version in sync between graphviz-devel and graphviz-gui-devel
-version                         2.27.20101001.0445
+version                         2.27.20101015.0445
 categories                      graphics aqua
 maintainers                     ryandesign
 license                         CPLv1.0
@@ -26,9 +26,8 @@ description                     Mac OS X Aqua GUI for viewing and exporting \
 
 long_description                ${description}.
 
-checksums                       md5     9f1aed5682305841985a4aa935cf3fa5 \
-                                sha1    1cc7a69ea63804e50eb2e7520e20fe7561b962c2 \
-                                rmd160  2d8335e22cdb9a41322ae9e0737c5ddf38a29a8c
+checksums                       sha1    6de161984db37bea8e9ec1a3d0ed30db36aab119 \
+                                rmd160  5b1797d383e078f926cf0fba3b9887dd7caa35a5
 
 depends_lib                     port:graphviz-devel
 
