kdiff3: disallow Xcode 3.0 (#17471)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72442 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/kdiff3/Portfile
+++ b/dports/devel/kdiff3/Portfile
@@ -1,6 +1,7 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           xcodeversion 1.0
 
 name                kdiff3
 version             0.9.92
@@ -35,6 +36,8 @@ pre-configure {
 }
 
 build.env           ${configure.env}
+
+minimum_xcodeversions {9 3.1}
 
 livecheck.type      regex
 livecheck.regex     "Current version: (\\d+(?:\\.\\d+)*)"
