kumofs: update to version 0.4.12 (maintainer timeout, closes #26349)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72446 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/kumofs/Portfile
+++ b/dports/net/kumofs/Portfile
@@ -3,8 +3,8 @@
 PortSystem		1.0
 
 name			kumofs
-version			0.4.7
-revision        1
+version			0.4.12
+revision        0
 homepage		http://kumofs.sourceforge.net/
 categories		net
 platforms		darwin
@@ -22,10 +22,9 @@ long_description \
 master_sites \
         http://github.com/downloads/etolabo/${name}
 
-checksums \
-        md5 0a96293b3123467b94a3b1de8294f991 \
-        sha1 ebb0c0d672544c08659484238c8155567fb55ae7 \
-        rmd160 d34013221456c2a24f13e7d55a7ddeedf3db85b0
+checksums           md5     70fc53a332fb2b76ae6a3aad7aa59aad \
+                    sha1    a1e895e42c8d5d75233f2234cf55069e76b4d39b \
+                    rmd160  01bbc92c4d06194e9fef02191a07238ebdc49020
 
 depends_lib \
 	port:msgpack \
