kumofs: reformat Portfile, add livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@72447 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/kumofs/Portfile
+++ b/dports/net/kumofs/Portfile
@@ -1,34 +1,38 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem		1.0
+PortSystem          1.0
 
-name			kumofs
-version			0.4.12
-revision        0
-homepage		http://kumofs.sourceforge.net/
-categories		net
-platforms		darwin
-maintainers		gmail.com:naoya.n
-use_parallel_build	yes
+name                kumofs
+version             0.4.12
+revision            0
+homepage            http://kumofs.sourceforge.net/
+categories          net
+platforms           darwin
+maintainers         gmail.com:naoya.n
 
-description a scalable and highly available distributed key-value store
+description         A scalable and highly available distributed key-value store.
 
-long_description \
-	kumofs is a scalable and highly available distributed key-value store. \
-	You can use a memcached client library to set, get, CAS or delete values \
-	from/into kumofs. Backend storage is Tokyo Cabinet and it will give you \
-	great performance.
+long_description    \
+        kumofs is a scalable and highly available distributed key-value store. \
+        You can use a memcached client library to set, get, CAS or delete values \
+        from/into kumofs. Backend storage is Tokyo Cabinet and it will give you \
+        great performance.
 
-master_sites \
-        http://github.com/downloads/etolabo/${name}
+master_sites        http://github.com/downloads/etolabo/${name}
 
-checksums           md5     70fc53a332fb2b76ae6a3aad7aa59aad \
-                    sha1    a1e895e42c8d5d75233f2234cf55069e76b4d39b \
-                    rmd160  01bbc92c4d06194e9fef02191a07238ebdc49020
+checksums           md5     9519c93332dd770ea96ae6e43868ccc4 \
+                    sha1    aaf92b16f11b15b42d93013d9687cf092a192ade \
+                    rmd160  846ac950d285c1189a6a57d622735742dc584079
 
-depends_lib \
-	port:msgpack \
-	port:rb-msgpack \
-	port:tokyocabinet \
-	port:openssl \
-	port:zlib
+use_parallel_build  yes
+
+depends_lib         port:msgpack \
+                    port:rb-msgpack \
+                    port:tokyocabinet \
+                    port:openssl \
+                    port:zlib
+
+livecheck.type      regex
+livecheck.url       http://github.com/etolabo/kumofs/downloads
+livecheck.regex     "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
