--- a/dports/textproc/tesseract/Portfile
+++ b/dports/textproc/tesseract/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 
 name                tesseract
 version             3.00
-revision            0
+revision            1
 categories          textproc graphics pdf
 platforms           darwin
 
@@ -41,7 +41,7 @@ foreach lang ${langs} {
             distfiles-append ${lang}.traineddata.gz:langdata
 
             post-destroot {
-                system "zcat ${distpath}/${lang}.traineddata.gz > ${destroot}${prefix}/share/tessdata/${lang}.traineddata"
+                system "gzip -cd ${distpath}/${lang}.traineddata.gz > ${destroot}${prefix}/share/tessdata/${lang}.traineddata"
             }
         }
     }]
