--- a/dports/net/curl/Portfile
+++ b/dports/net/curl/Portfile
@@ -8,6 +8,7 @@ PortGroup                   archcheck 1.0
 name                        curl
 # keep the version in sync with the curl-ca-bundle port
 version                     7.21.2
+revision                    1
 categories                  net www
 maintainers                 ryandesign
 license                     curl
@@ -36,7 +37,10 @@ checksums                   sha1    f729552a905033dbd0d2cf56e40c7048f2d8331e \
 configure.args              --enable-ipv6 \
                             --without-gnutls \
                             --without-gssapi \
+                            --without-librtmp \
                             --without-libssh2 \
+                            --without-nss \
+                            --without-polarssl \
                             --without-spnego \
                             --without-ssl \
                             --disable-ares \
